# dbd

./: .dbd-agent.toml.example  .env.example  .gitignore  Agent.Dockerfile  Cargo.toml  Dockerfile  README.md  flake.nix
dbd/: .env.example  Cargo.toml  Config.toml.example  Dockerfile
dbd-agent/: .dockerignore  .env.example  Cargo.toml  Config.toml.example  Dockerfile
dbd-agent/src/: auth.rs  commands.rs  dump_query.rs  encode.rs  frame.rs  lib.rs  main.rs  opt.rs  settings.rs  state.rs  util.rs
dbd/src/: emoji.rs  lib.rs  main.rs  opt.rs  settings.rs
src/: auth.rs  commands.rs  lib.rs  main.rs  settings.rs  state.rs
