[package]
name = "dbd-agent"
version = "0.2.0"
authors = ["Șerban Robu <serbanrobu@protonmail.com>"]
edition = "2018"

[dependencies]
tide = "0.16.0"
anyhow = "1.0.38"
async-std = { version = "1.9.0", features = ["attributes"] }
config = { version = "0.10.1", default-features = false, features = ["toml"] }
dirs = "3.0.1"
serde = { version = "1.0.123", features = ["derive"] }
structopt = "0.3.21"
uuid = { version = "0.8.2", features = ["v4"] }
