[package]
name = "dbd-agent"
version = "0.3.0"
authors = ["Șerban Robu <serbanrobu@protonmail.com>"]
edition = "2018"

[dependencies]
tide = "0.16.0"
anyhow = "1.0.38"
async-std = { version = "1.9.0", features = ["attributes", "tokio1"] }
config = { version = "0.10.1", default-features = false, features = ["toml"] }
dirs = "3.0.1"
serde = { version = "1.0.124", features = ["derive"] }
structopt = "0.3.21"
async-bincode = "0.6.1"
tokio = { version = "1.2.0", features = ["io-util", "io-std", "process"] }
tokio-stream = "0.1.3"
tokio-util = { version = "0.6.3", features = ["codec", "compat"] }
futures = "0.3.13"
async-compression = { version = "0.3.7", features = ["tokio", "gzip"] }
chrono = "0.4.19"
